
- Fix utf-8-sig incremental decoder, which didn't recognise a BOM when the
  first chunk fed to the decoder started with a BOM, but was longer than 3 bytes.

- The implementation of UnicodeError objects has been simplified (start and end
  attributes are now stored directly as Py_ssize_t members).

Extension Modules
-----------------

- Added bdist_wininst executable for VS 2008.

- Bug #1604: collections.deque.__init__(iterable) now clears any prior contents
  before adding elements from the iterable.  This fix brings the behavior into
  line with that for list.__init__().

- Added wide char functions to msvcrt module: getwch, getwche, putwch and
  ungetwch. The functions accept or return unicode.

- os.access now returns True on Windows for any existing directory.

- Added warnpy3k function to the warnings module.

- Marshal.dumps() now expects exact type matches for int, long, float, complex,
  tuple, list, dict, set, and frozenset.  Formerly, it would silently miscode
  subclasses of those types.  Now, it raises a ValueError instead.

- Patch #1388440: Add set_completion_display_matches_hook and
  get_completion_type to readline.

- Bug #1649098: Avoid declaration of zero-sized array declaration in
  structure.

- Removed the rgbimg module; been deprecated since Python 2.5.

- Bug #1721309: prevent bsddb module from freeing random memory.

- Bug #1233: fix bsddb.dbshelve.DBShelf append method to work as
  intended for RECNO databases.

- pybsddb.sf.net Bug #477182: Load the database flags at database open
  time so that opening a database previously created with the DB_DUP or
  DB_DUPSORT flag set will keep the proper behavior on subsequent opens.
  Specifically: dictionary assignment to a DB object will replace all
  values for a given key when the database allows duplicate values.
  DB users should use DB.put(k, v) when they want to store duplicates; not
  DB[k] = v.

- Add the bsddb.db.DBEnv.lock_id_free method.
